--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -1,20 +1,149 @@
 .hero {
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+
+  &__section {
+    width: 50%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
   &__left {
     &--title {
+      margin-top: 5rem;
+      font-size: 10rem;
+      color: pink;
+
+      span {
+        color: #fff;
+      }
     }
   }
 
   &__awards {
+    width: 30%;
+
     &--heading {
+      text-transform: capitalize;
+      font-size: 1.6rem;
     }
 
     &--desc {
+      font-size: 1.4rem;
+      color: #ddd;
+      margin: 1.6rem 0;
     }
 
     &--list {
+      display: flex;
+      gap: 0.8rem;
+
+      img {
+        width: 3.6rem;
+        height: 3.6rem;
+        padding: 0.8rem;
+        background-color: #fff;
+        border-radius: 100%;
+      }
     }
   }
 
+  &__scroll {
+    width: max-content;
+    margin-bottom: 5rem;
+  }
+
   &__right {
+    align-items: end;
+
+    &--follow {
+      display: flex;
+      flex-direction: column;
+      gap: 1.2rem;
+
+      padding: 1.6rem;
+      background-color: #2f204e;
+      border-bottom-right-radius: 1rem;
+
+      a {
+        img {
+          width: 2rem;
+          height: 2rem;
+        }
+      }
+    }
+
+    &--certificate {
+      width: 60%;
+      text-transform: capitalize;
+      text-align: center;
+      font-weight: 300;
+      font-size: 1.6rem;
+      color: #ddd;
+      line-height: 2.4rem;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.8rem;
+
+      img {
+        width: 7rem;
+        height: 7rem;
+      }
+    }
+  }
+
+  &__text-container {
+    width: 2rem;
+    height: 2rem;
+
+    &--text {
+      text-transform: uppercase;
+      font-size: 1.2rem;
+      rotate: 90deg;
+      transform-origin: left top;
+      transform: translateY(-2rem);
+      width: max-content;
+      height: 100%;
+      padding: 0 0.8rem;
+      background-color: #dd4c62;
+
+      display: flex;
+      align-items: center;
+      border-bottom-right-radius: 1rem;
+    }
+  }
+
+  &__contact-link {
+    margin-bottom: 5rem;
+
+    &--btn {
+      position: relative;
+    }
+  }
+
+  &__circle-text {
+    font-size: 2rem;
+    letter-spacing: 3px;
+  }
+
+  &__arrow {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 8rem;
+    height: 8rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
