--- a/src/index.scss
+++ b/src/index.scss
@@ -14,16 +14,16 @@ html {
 
 body {
   background: linear-gradient(to bottom, #12071f, #2f204e);
-  color: white;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #fff;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   min-height: 100vh;
   overflow-x: hidden;
 }
 
 a {
   text-decoration: none;
-  color: white;
+  color: #fff;
 }
 
 button {
