--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -28,8 +28,8 @@
     width: 30%;
 
     &--heading {
+      width: max-content;
       text-transform: capitalize;
-      font-size: 1.6rem;
     }
 
     &--desc {
@@ -82,7 +82,7 @@
       text-transform: capitalize;
       text-align: center;
       font-weight: 300;
-      font-size: 1.6rem;
+
       color: #ddd;
       line-height: 2.4rem;
 
@@ -145,5 +145,30 @@
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  &__bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+    &--img {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      margin: auto;
+      width: max-content;
+      height: 80%;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
   }
 }
