--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ html {
 }
 
 body {
+  font-size: 1.6rem;
   background: linear-gradient(to bottom, #12071f, #2f204e);
   color: #fff;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
