--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -3,6 +3,10 @@
   overflow: hidden;
   display: flex;
 
+  @media (max-width: 48em) {
+    flex-direction: column;
+  }
+
   &__section {
     width: 50%;
     height: 100%;
@@ -10,6 +14,19 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    @media (max-width: 48em) {
+      width: 100%;
+    }
+  }
+
+  &__section,
+  &__left {
+    @media (max-width: 48em) {
+      align-items: center;
+      text-align: center;
+      gap: 3.6rem;
+    }
   }
 
   &__left {
@@ -17,6 +34,22 @@
       margin-top: 5rem;
       font-size: 10rem;
       color: pink;
+
+      @media (max-width: 96em) {
+        font-size: 7.2rem;
+      }
+
+      @media (max-width: 80em) {
+        font-size: 8.8rem;
+      }
+
+      @media (max-width: 64em) {
+        font-size: 7.2rem;
+      }
+
+      @media (max-width: 48em) {
+        font-size: 4.8rem;
+      }
 
       span {
         color: #fff;
@@ -27,9 +60,21 @@
   &__awards {
     width: 30%;
 
+    @media (max-width: 80em) {
+      width: 60%;
+    }
+
+    @media (max-width: 48em) {
+      width: 100%;
+    }
+
     &--heading {
       width: max-content;
       text-transform: capitalize;
+
+      @media (max-width: 48em) {
+        width: 100%;
+      }
     }
 
     &--desc {
@@ -41,6 +86,10 @@
     &--list {
       display: flex;
       gap: 0.8rem;
+
+      @media (max-width: 48em) {
+        justify-content: center;
+      }
 
       img {
         width: 3.6rem;
@@ -57,6 +106,13 @@
     margin-bottom: 5rem;
   }
 
+  &__section,
+  &__right {
+    @media (max-width: 48em) {
+      justify-content: end;
+    }
+  }
+
   &__right {
     align-items: end;
 
@@ -68,6 +124,10 @@
       padding: 1.6rem;
       background-color: #2f204e;
       border-bottom-right-radius: 1rem;
+
+      @media (max-width: 48em) {
+        display: none;
+      }
 
       a {
         img {
@@ -90,6 +150,10 @@
       flex-direction: column;
       align-items: center;
       gap: 0.8rem;
+
+      @media (max-width: 48em) {
+        display: none;
+      }
 
       img {
         width: 7rem;
@@ -155,6 +219,20 @@
     left: 0;
     z-index: -1;
 
+    @media (max-width: 80em) {
+      height: 60%;
+      top: auto;
+      bottom: 0;
+    }
+
+    @media (max-width: 64em) {
+      height: 50%;
+    }
+
+    @media (max-width: 48em) {
+      height: 60%;
+    }
+
     &--img {
       position: absolute;
       bottom: 0;
@@ -163,6 +241,10 @@
       margin: auto;
       width: max-content;
       height: 80%;
+
+      @media (max-width: 80em) {
+        height: 100%;
+      }
 
       img {
         width: 100%;
