--- a/src/components/hero/speechBubble/SpeechBubble.scss
+++ b/src/components/hero/speechBubble/SpeechBubble.scss
@@ -5,6 +5,14 @@
   justify-content: space-between;
   gap: 0.8rem;
 
+  @media (max-width: 80em) {
+    width: 100%;
+  }
+
+  @media (max-width: 48em) {
+    display: none;
+  }
+
   &__text {
     width: 100%;
     height: 10rem;
