--- a/src/components/services/Services.scss
+++ b/src/components/services/Services.scss
@@ -1,2 +1,82 @@
 .services {
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+
+  &__section {
+    width: 50%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    .left {
+    }
+
+    .right {
+    }
+  }
+
+  &__title {
+    font-size: 8.8rem;
+    margin-bottom: 2.4rem;
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+
+    &--item {
+      width: 50%;
+      padding: 3rem;
+      background-color: #2f213f;
+      border-radius: 2rem;
+      cursor: pointer;
+
+      display: flex;
+      align-items: center;
+      gap: 1.6rem;
+
+      &:nth-child(1) .services__list--icon {
+        background-color: #dd4c62;
+      }
+
+      &:nth-child(2) .services__list--icon {
+        background-color: #025656;
+      }
+
+      &:nth-child(3) .services__list--icon {
+        background-color: #6c5c0c;
+      }
+    }
+
+    &--icon {
+      width: 4.8rem;
+      height: 4.8rem;
+      border-radius: 100%;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        width: 2.4rem;
+        height: 2.4rem;
+      }
+    }
+
+    &--info {
+      h2 {
+        font-weight: 500;
+        font-size: 1.8rem;
+        margin-bottom: 0.8rem;
+      }
+
+      h3 {
+        font-weight: 300;
+        font-size: 1.3rem;
+      }
+    }
+  }
 }
