--- a/src/components/services/Services.scss
+++ b/src/components/services/Services.scss
@@ -3,6 +3,11 @@
   overflow: hidden;
   display: flex;
 
+  @media (max-width: 48em) {
+    align-items: center;
+    justify-content: center;
+  }
+
   &__section {
     width: 50%;
 
@@ -10,16 +15,31 @@
     flex-direction: column;
     justify-content: center;
 
-    .left {
+    @media (max-width: 48em) {
+      width: 100%;
     }
 
-    .right {
+    &.left {
+    }
+
+    &.right {
+      @media (max-width: 48em) {
+        display: none;
+      }
     }
   }
 
   &__title {
     font-size: 8.8rem;
     margin-bottom: 2.4rem;
+
+    @media (max-width: 80em) {
+      font-size: 12.8rem;
+    }
+
+    @media (max-width: 62em) {
+      font-size: 4.8rem;
+    }
   }
 
   &__list {
@@ -49,6 +69,14 @@
       &:nth-child(3) .services__list--icon {
         background-color: #6c5c0c;
       }
+
+      @media (max-width: 96em) {
+        width: 70%;
+      }
+
+      @media (max-width: 80em) {
+        width: 100%;
+      }
     }
 
     &--icon {
@@ -77,6 +105,22 @@
         font-weight: 300;
         font-size: 1.3rem;
       }
+    }
+  }
+
+  &__counter-list {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2.4rem;
+
+    @media (max-width: 96em) {
+      width: 70%;
+    }
+
+    @media (max-width: 62em) {
+      width: 100%;
     }
   }
 }
