--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -10,4 +10,22 @@
     width: max-content;
     height: 100vh;
   }
+
+  &__progress {
+    position: sticky;
+    left: 0;
+    bottom: 80%;
+    width: 8rem;
+    height: 8rem;
+
+    @media (max-width: 64em) {
+      bottom: 10rem;
+      left: 100%;
+    }
+
+    @media (max-width: 48em) {
+      width: 5rem;
+      height: 5rem;
+    }
+  }
 }
